--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .customButton {
+    @apply border-2 border-[#5E443A] text-[#5E443A] hover:bg-[#5E443A] hover:text-white px-6 py-2 rounded-md focus:outline-none;
+  }
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -65,14 +71,5 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
