--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .customButton {
-    @apply border-2 border-[#5E443A] text-[#5E443A] hover:bg-[#5E443A] hover:text-white px-6 py-2 rounded-md focus:outline-none;
+    @apply border-2 border-[#5E443A] text-[#5E443A] hover:bg-[#5E443A] hover:text-white px-6 py-2 rounded focus:outline-none;
   }
 }
 
