--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,15 +4,13 @@
 
 @layer components {
   .customButton {
-    @apply text-xl font-semibold border-2 border-[#5E443A] text-[#5E443A] hover:bg-[#5E443A] hover:text-white px-6 py-2 rounded focus:outline-none;
+    @apply text-xl font-semibold border-2 border-[#34244c] text-[#34244c] hover:bg-[#34244c] hover:text-white px-6 py-2 rounded focus:outline-none;
   }
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
-
 
 @layer utilities {
   .text-balance {
@@ -75,5 +73,3 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
-
-
