--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     @apply text-xs font-semibold border-2 bg-gradient-to-r from-purple-800 to-pink-800 border-purple-800 text-white hover:bg-white hover:text-white px-2 py-2 rounded focus:outline-none;
   }
   .customHeading {
-    @apply text-3xl md:text-4xl lg:text-5xl font-bold text-transparent bg-gradient-to-r from-[#c6951c] to-purple-600 bg-clip-text mb-8;
+    @apply text-xl md:text-2xl lg:text-4xl font-bold text-transparent bg-gradient-to-r from-[#c6951c] to-purple-600 bg-clip-text mb-8;
   }
   .customSubHeading {
     @apply text-2xl md:text-2xl lg:text-3xl font-bold text-transparent bg-gradient-to-r from-[#c6951c] to-purple-600 bg-clip-text mb-4;
